--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -53,9 +53,6 @@
 
   .nav__button {
     width: 100%;
-  }
-
-  .nav__button:first-of-type {
-    margin-left: 1rem;
+    margin: 0;
   }
 }
