--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,6 +140,7 @@ $dark-gray: #888;
 
 .card .card__button {
   margin-bottom: 0;
+  padding: 0;
 }
 
 .card .card__button:hover {
